--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,20 @@
           <artifactId>mockito-all</artifactId>
           <version>1.10.19</version>
       </dependency>
+
+      <!-- Bean validation api -->
+      <dependency>
+          <groupId>javax.validation</groupId>
+          <artifactId>validation-api</artifactId>
+          <version>1.1.0.Final</version>
+      </dependency>
+
+      <!-- Hibernate Validator -->
+      <dependency>
+          <groupId>org.hibernate</groupId>
+          <artifactId>hibernate-validator</artifactId>
+          <version>5.0.1.Final</version>
+      </dependency>
   </dependencies>
 
   <build>
@@ -164,7 +178,7 @@
               </configuration>
           </plugin>
           <!-- Maven Exec Plugin -->
-          <plugin>
+          <!--<plugin>
               <groupId>org.codehaus.mojo</groupId>
               <artifactId>exec-maven-plugin</artifactId>
               <version>1.4.0</version>
@@ -175,11 +189,11 @@
                       </goals>
                   </execution>
               </executions>
-              <configuration>
+              <configuration    >
                   <mainClass>Main</mainClass>
                   <classpathScope>test</classpathScope>
               </configuration>
-          </plugin>
+          </plugin>   -->
       </plugins>
 
      <!-- <resources>
