--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,12 @@
       </dependency>
 
       <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-orm</artifactId>  <!-- or spring-jpa???-->
+          <version>4.2.5.RELEASE</version>
+      </dependency>
+
+      <dependency>
           <groupId>javax</groupId>
           <artifactId>javaee-api</artifactId>
           <version>7.0</version>
