--- a/pom.xml
+++ b/pom.xml
@@ -89,30 +89,36 @@
       <dependency>
           <groupId>org.springframework</groupId>
           <artifactId>spring-context</artifactId>
-          <version>4.2.3.RELEASE</version>
+          <version>4.2.5.RELEASE</version>
       </dependency>
 
       <dependency>
           <groupId>org.springframework</groupId>
           <artifactId>spring-core</artifactId>
-          <version>4.2.3.RELEASE</version>
+          <version>4.2.5.RELEASE</version>
       </dependency>
 
       <dependency>
           <groupId>org.springframework</groupId>
           <artifactId>spring-web</artifactId>
-          <version>4.2.3.RELEASE</version>
+          <version>4.2.5.RELEASE</version>
       </dependency>
 
       <dependency>
           <groupId>org.springframework</groupId>
           <artifactId>spring-webmvc</artifactId>
-          <version>4.2.3.RELEASE</version>
+          <version>4.2.5.RELEASE</version>
       </dependency>
 
       <dependency>
           <groupId>org.springframework</groupId>
           <artifactId>spring-orm</artifactId>  <!-- or spring-jpa???-->
+          <version>4.2.5.RELEASE</version>
+      </dependency>
+
+      <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-aspects</artifactId>
           <version>4.2.5.RELEASE</version>
       </dependency>
 
