--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,9 +7,17 @@
 
     <servlet>
         <servlet-name>simpleweb</servlet-name>
-        <servlet-class>
-            org.springframework.web.servlet.DispatcherServlet
-        </servlet-class>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <init-param>
+            <param-name>contextClass</param-name>
+            <param-value>
+                org.springframework.web.context.support.AnnotationConfigWebApplicationContext
+            </param-value>
+        </init-param>
+        <init-param>
+            <param-name>contextConfigLocation</param-name>
+            <param-value>com.oreva.simpleweb.mvc.AppConfig</param-value>
+        </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
 
@@ -29,9 +37,9 @@
         <param-value>
             /WEB-INF/simpleweb-servlet.xml
         </param-value>
-    </context-param>
+    </context-param>-->
 
-    <welcome-file-list>
+    <!--<welcome-file-list>
         <welcome-file>/WEB-INF/views/index.html</welcome-file>
     </welcome-file-list> -->
 </web-app>
