--- a/pom.xml
+++ b/pom.xml
@@ -149,10 +149,16 @@
       </dependency>
 
       <!-- Dozer Framework for entity to DTO (and vice versa) conversion -->
-      <dependency>
+      <!--<dependency>
           <groupId>net.sf.dozer</groupId>
           <artifactId>dozer</artifactId>
           <version>5.5.1</version>
+      </dependency>-->
+
+      <dependency>
+          <groupId>org.springframework.data</groupId>
+          <artifactId>spring-data-jpa</artifactId>
+          <version>1.10.1.RELEASE</version>
       </dependency>
   </dependencies>
 
