--- a/pom.xml
+++ b/pom.xml
@@ -155,14 +155,26 @@
           <version>5.5.1</version>
       </dependency>-->
 
+      <!-- Spring Data JPA -->
       <dependency>
           <groupId>org.springframework.data</groupId>
           <artifactId>spring-data-jpa</artifactId>
           <version>1.10.1.RELEASE</version>
       </dependency>
+
+      <!-- Spring Security -->
+      <dependency>
+          <groupId>org.springframework.security</groupId>
+          <artifactId>spring-security-web</artifactId>
+          <version>4.0.4.RELEASE</version>
+      </dependency>
+      <dependency>
+          <groupId>org.springframework.security</groupId>
+          <artifactId>spring-security-config</artifactId>
+          <version>4.0.4.RELEASE</version>
+      </dependency>
+
   </dependencies>
-
-
 
   <build>
     <finalName>SpringHibernateLab</finalName>
