--- a/pom.xml
+++ b/pom.xml
@@ -174,6 +174,12 @@
           <version>4.0.4.RELEASE</version>
       </dependency>
 
+      <!-- Mockito -->
+      <dependency>
+          <groupId>org.mockito</groupId>
+          <artifactId>mockito-core</artifactId>
+          <version>2.0.71-beta</version>
+      </dependency>
   </dependencies>
 
   <build>
